<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LevelMenuActivity">


    <Button
        android:id="@+id/resumeLevelBtn"
        android:layout_width="175dp"
        android:layout_height="80dp"
        android:onClick="resumeLevel"
        android:text="@string/resume"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pausedText"
        app:layout_constraintVertical_bias="0.100000024" />

    <Button
        android:id="@+id/mainMenuBtn"
        android:layout_width="175dp"
        android:layout_height="80dp"
        android:onClick="returnToMainMenu"
        android:text="@string/main_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumeLevelBtn" />

    <TextView
        android:id="@+id/pausedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/paused"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#2AA530"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>