<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".EndGameActivity">

    <Button
        android:id="@+id/restartLevelBtn"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginBottom="128dp"
        android:onClick="restartLevel"
        android:text="@string/restart_level_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/restart_level_button_text" />

    <Button
        android:id="@+id/mainMenuBtn"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:onClick="returnToMainMenu"
        android:text="@string/main_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restartLevelBtn" />

    <ImageView
        android:id="@+id/endGameImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@android:dimen/thumbnail_height"
        android:contentDescription="@string/end_level_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/level_end" />

    <TextView
        android:id="@+id/palladiumCollectedTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text=""
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endGameImg" />

    <TextView
        android:id="@+id/scoreTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text=""
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/palladiumCollectedTxt" />

    <Button
        android:id="@+id/nextLevelBtn"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:text="@string/next_level_button_text"
        android:onClick="nextLevel"
        app:layout_constraintBottom_toTopOf="@+id/restartLevelBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreTxt" />
</androidx.constraintlayout.widget.ConstraintLayout>